--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "interactive-rating-component-main-solution",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
